--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>Boilerplate</title>
+  <title>Viral Cards</title>
+
+  <!-- Cordova code; feel free to delete this -->
+  <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+  <script type="text/javascript" charset="utf-8">
+    function onLoad() {
+      document.addEventListener("deviceready", onDeviceReady, false);
+    }
+
+    function onDeviceReady() {
+      AndroidFullScreen.immersiveMode();
+    }
+
+  </script>
 
   <!-- build:css main.min.css -->
   <link rel="stylesheet" href="css/main.css">
@@ -10,11 +24,10 @@
 
   <style>
     @font-face {
-    font-family: 'GreatVibes';
-    src: url('fonts/GreatVibes-Regular.woff') format('woff'),
-    url('fonts/GreatVibes-Regular.ttf') format('opentype');
+      font-family: 'GreatVibes';
+      src: url('fonts/GreatVibes-Regular.woff') format('woff'),
+      url('fonts/GreatVibes-Regular.ttf') format('opentype');
     }
-    
   </style>
 </head>
 
@@ -29,7 +42,7 @@
   <!-- build:js phaser.min.js -->
   <script src="node_modules/phaser/build/phaser.min.js"></script>
   <!-- /build -->
-  
+
   <!-- build:js libs/phaser-state-transition.min.js -->
   <script src="libs/phaser-state-transition.min.js"></script>
   <!-- /build -->
@@ -43,5 +56,5 @@
   <!-- /build -->
 
 </body>
-</html>
 
+</html>
